# aws-cost-report

./: LICENSE  pyproject.toml  readme.md
aws_cost_report/: __init__.py
tests/: test_aws_cost_report.py
