[tool.poetry]
name = "aws-cost-report"
version = "0.1.0"
description = ""
authors = ["James Carr <james.r.carr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
boto3 = "^1.26.17"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = "aws_cost_report:report"
